chapitres/21/policy-strict.yaml
apiVersion: "security.istio.io/v1"
kind: "PeerAuthentication"
metadata:
  name: "mailpit-istio-client-mtls-strict"
  namespace: "test-istio"
spec:
  selector:
    matchLabels:
      app: mailpit
  mtls:
    mode: STRICT
