chapitres/21/destination-rule-mtls.yaml
apiVersion: "networking.istio.io/v1"
kind: "DestinationRule"
metadata:
  name: "mailpit-istio-client-mtls"
  namespace: "test-istio"
spec:
  host: mailpit.test-istio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
